# mockaccel-runtime

./: .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  README.md  pyproject.toml
.gitlab/: CODEOWNERS
.gitlab/issue_templates/: Bug.md  Feature.md
.gitlab/merge_request_templates/: Default.md
ci/: README.md
cmake/toolchains/: aarch64-linux-gnu.cmake
device_simulator/: CMakeLists.txt
device_simulator/src/: main.cpp
docs/: protocol.md
examples/: hello.py
examples/models/: fake_yolo.hef  tiny.hef
include/mockaccel/: device.hpp  errors.hpp  protocol.hpp
pymockaccel/: CMakeLists.txt
pymockaccel/src/: bindings.cpp
runtime_core/: CMakeLists.txt
runtime_core/src/: client.cpp  client.hpp  codec.cpp  codec.hpp  device.cpp
scripts/: README.md  bootstrap.sh  build.sh  deploy.sh  lint.sh  package.sh  publish.sh  release.sh  test.sh
scripts/lib/: common.sh
tests/: README.md  conftest.py
