# SPDX-License-Identifier: Apache-2.0
#
# pyproject.toml
#
# Single source of truth for Python project metadata and dev-tool config.
# Follows PEP 621 (project metadata) and PEP 517/518 (build system).
#
# This project ships no installable Python source of its own; pymockaccel/
# is built and installed by the C++/CMake side. The role of this file is
# purely to declare the dev toolchain (pytest, ruff, mypy, coverage) and
# its configuration, so that `pip install -e ".[dev]"` from a fresh venv
# produces an audit-grade Python environment in one command.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# --- project metadata (PEP 621) -------------------------------------------
[project]
name = "mockaccel-tests"
version = "0.0.0"
description = "Dev-tool environment and test harness for mockaccel-runtime."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "mockaccel contributors" },
]
# No runtime dependencies. The test harness depends only on dev tools,
# declared below under [project.optional-dependencies].
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

# --- setuptools: no source to install -------------------------------------
# We are not packaging any Python source here. The empty py-modules and
# packages lists make `pip install -e .` an effective no-op for source
# discovery; it still installs the [project.optional-dependencies].
[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = []
exclude = ["tests*", "build*", "third_party*"]

# --- pytest ---------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# --strict-config and --strict-markers turn typos in config/markers into
# errors instead of silent no-ops; -ra prints a short summary of skips
# and xfails. We deliberately do NOT include --cov here so quick local
# runs stay fast; CI and `pytest --cov` opt in explicitly.
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
xfail_strict = true
# Future markers register here as a list of "name: description" strings.
markers = []

# --- ruff (lint + format) -------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["build", "third_party", ".venv"]

[tool.ruff.lint]
# E,F   pycodestyle + pyflakes (PEP 8 basics, undefined names)
# I     isort (import ordering)
# B     bugbear (likely-bug patterns)
# UP    pyupgrade (modernize syntax for target-version)
# SIM   simplify (readability rewrites)
# RUF   ruff-native rules
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- mypy -----------------------------------------------------------------
# The pymockaccel native bindings live outside this tree and have their
# own typing posture; do not let mypy try to follow imports into them.
[[tool.mypy.overrides]]
module = ["pymockaccel", "pymockaccel.*"]
ignore_missing_imports = true

# --- coverage -------------------------------------------------------------
# Configured but not auto-attached. Trigger explicitly via `pytest --cov`
# or via test.sh in CI. fail_under is intentionally absent until Stage 5
# adds real tests that produce meaningful numbers.
[tool.coverage.run]
branch = true
source = ["pymockaccel"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
